Adding css to html structure

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 </head>
 <body>
     <h1 class="Heading">
-        <img class="logo" src="assets/css/js/images/logo.png" alt="logo">Love Maths
+        <img class="logo" src="assets/images/logo.png" alt="logo">Love Maths
     </h1>
-    
-    
 
     <div class="game-area">
         <div class="controls-area">
@@ -51,6 +49,6 @@
 
     </div>
 
-    <script src="assets/css/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
